# castometer

./: .gitignore  README.md  app.py  plotting.py  pymtg.py  pyproject.toml  quick.py  scryfall_data.py
templates/: main.html  results_page.html
